# advent-of-code-2025

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  oncreate.sh
.github/workflows/: ci.yaml
advent_of_code_2025/day01/: part1.py  part2.py
advent_of_code_2025/day02/: part1.py  part2.py
advent_of_code_2025/day03/: part1.py
advent_of_code_2025/day04/: part1.py  part2.py
advent_of_code_2025/day05/: part1.py  part2.py
advent_of_code_2025/day06/: part1.py  part2.py
advent_of_code_2025/day07/: part1.py  part2.py
advent_of_code_2025/day08/: part1.py  part2.py
tests/day01/: conftest.py  test__day01part2.py  test__part1.py
tests/day02/: conftest.py  test__day02part1.py  test__day02part2.py
tests/day03/: test__day03part1.py  test__day03part2.py
tests/day04/: test__day04part1.py  test__day04part2.py
tests/day05/: conftest.py  test__day05part1.py  test__day05part2.py
tests/day06/: conftest.py  test__day06part1.py  test__day06part2.py
tests/day07/: conftest.py  test__day07part1.py  test__day07part2.py
tests/day08/: conftest.py  test__day08part1.py  test__day08part2.py
