[project]
name = "advent-of-code-2025"
requires-python = ">=3.14"
version = "0.0.0"

[[project.authors]]
name = "Thijs Franck"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-sugar>=1.0.0",
    "ruff>=0.12.3",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.14"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "standard"
venvPath = "."

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
ignore = [
    "D100",
    "D104",
    "D105",
    "D212",
    "D107",
    "LOG015",
    "S311",
    "FIX002",
    "PT001",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/conftest.py" = ["INP001"]
"tests/**/test__*.py" = ["INP001", "S101", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
